#1116 Fix cropped label on widgets

--- a/server/http-dashboard/app/components/Widgets/components/Widget/styles.less
+++ b/server/http-dashboard/app/components/Widgets/components/Widget/styles.less
@@ -47,7 +47,6 @@
   font-size: @style-font-size-3;
   font-weight: 500;
   > div {
-    height: 32px;
     line-height: 20px;
   }
 }
